logs/mangrove.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mangrove'...
Listing './lib/python3.5/site-packages/mangrove/datastore'...
Compiling './lib/python3.5/site-packages/mangrove/datastore/database.py'...
***   File "./lib/python3.5/site-packages/mangrove/datastore/database.py", line 48
    except KeyError, ex:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mangrove/datastore/tests'...
Compiling './lib/python3.5/site-packages/mangrove/datastore/tests/test_data.py'...
***   File "./lib/python3.5/site-packages/mangrove/datastore/tests/test_data.py", line 38
    event_time=datetime.datetime(2010, 03, 01, tzinfo=UTC),
                                        ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/mangrove/datastore/tests/test_data_dict_mock.py'...
***   File "./lib/python3.5/site-packages/mangrove/datastore/tests/test_data_dict_mock.py", line 15
    self.datetime_module.return_value = datetime(2010, 01, 01, 10, 11, 12)
                                                        ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/mangrove/datastore/tests/test_data_records.py'...
***   File "./lib/python3.5/site-packages/mangrove/datastore/tests/test_data_records.py", line 14
    ('opened_on', datetime(2011, 01, 02, tzinfo=UTC), test_data.dd_types['facility'])]
                                  ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/mangrove/datastore/tests/test_entity.py'...
***   File "./lib/python3.5/site-packages/mangrove/datastore/tests/test_entity.py", line 29
    print e.type_string
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mangrove/datastore/tests/test_predefined_aggregation.py'...
***   File "./lib/python3.5/site-packages/mangrove/datastore/tests/test_predefined_aggregation.py", line 107
    period=Day(01,02,2010),include_grand_totals=True)
                ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/mangrove/datastore/tests/test_query_api.py'...
***   File "./lib/python3.5/site-packages/mangrove/datastore/tests/test_query_api.py", line 52
    event_time=datetime.datetime(2011, 01, 01, tzinfo=UTC))
                                        ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/mangrove/datastore/views'...
Compiling './lib/python3.5/site-packages/mangrove/datastore/views/measure_view_generation_times.py'...
***   File "./lib/python3.5/site-packages/mangrove/datastore/views/measure_view_generation_times.py", line 111
    print ",".join(["number of entities"] + [str(i) for i in iterations])
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mangrove/errors'...
Listing './lib/python3.5/site-packages/mangrove/form_model'...
Listing './lib/python3.5/site-packages/mangrove/form_model/tests'...
Listing './lib/python3.5/site-packages/mangrove/georegistry'...
Compiling './lib/python3.5/site-packages/mangrove/georegistry/api.py'...
***   File "./lib/python3.5/site-packages/mangrove/georegistry/api.py", line 37
    print e.message
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mangrove/transport'...
Listing './lib/python3.5/site-packages/mangrove/transport/player'...
Listing './lib/python3.5/site-packages/mangrove/transport/player/integrationtests'...
Compiling './lib/python3.5/site-packages/mangrove/transport/player/parser.py'...
***   File "./lib/python3.5/site-packages/mangrove/transport/player/parser.py", line 13
    MESSAGE_PREFIX = ur'^(\w+)\s+\.(\w+)\s+(\w+)'
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mangrove/transport/player/tests'...
Listing './lib/python3.5/site-packages/mangrove/utils'...
Listing './lib/python3.5/site-packages/mangrove/utils/spreadsheets'...
Listing './lib/python3.5/site-packages/mangrove/utils/test_utils'...
Listing './lib/python3.5/site-packages/mangrove/utils/tests'...
Compiling './lib/python3.5/site-packages/mangrove/utils/tests/test_utils.py'...
***   File "./lib/python3.5/site-packages/mangrove/utils/tests/test_utils.py", line 148
    datetuple = (2011, 03, 22, 02, 23, 42)
                        ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/mangrove/validate.py'...
***   File "./lib/python3.5/site-packages/mangrove/validate.py", line 284
    return 0xFFFFFFFFL
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mangrove-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
